--- a/lighthouse-core/report/v2/report-styles.css
+++ b/lighthouse-core/report/v2/report-styles.css
@@ -21,8 +21,8 @@
 
   --secondary-text-color: #565656;
   /*--accent-color: #3879d9;*/
-  --poor-color: #df332f;
-  --good-color: #2b882f;
+  --fail-color: #df332f;
+  --pass-color: #2b882f;
   --average-color: #ef6c00; /* md orange 800 */
   --warning-color: #757575; /* md grey 600 */
 
@@ -46,9 +46,14 @@ body {
   line-height: var(--body-line-height);
 }
 
+[hidden] {
+  display: none !important;
+}
+
 /* List */
 .lighthouse-list {
   font-size: smaller;
+  margin-top: var(--default-padding);
 }
 
 .lighthouse-list__header {
@@ -96,21 +101,21 @@ body {
   border-radius: inherit;
 }
 
-.lighthouse-score__value--boolean {
+.lighthouse-score__value--binary {
   text-indent: -500px;
 }
 
 /* No icon for audits with number scores. */
-.lighthouse-score__value:not(.lighthouse-score__value--boolean)::after {
+.lighthouse-score__value:not(.lighthouse-score__value--binary)::after {
   content: none;
 }
 
-.lighthouse-score__value--good {
-  background: var(--good-color);
+.lighthouse-score__value--pass {
+  background: var(--pass-color);
 }
 
-.lighthouse-score__value--good::after {
-  background: url('data:image/svg+xml;utf8,<svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><title>good</title><path d="M9.17 2.33L4.5 7 2.83 5.33 1.5 6.66l3 3 6-6z" fill="white" fill-rule="evenodd"/></svg>') no-repeat 50% 50%;
+.lighthouse-score__value--pass::after {
+  background: url('data:image/svg+xml;utf8,<svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><title>pass</title><path d="M9.17 2.33L4.5 7 2.83 5.33 1.5 6.66l3 3 6-6z" fill="white" fill-rule="evenodd"/></svg>') no-repeat 50% 50%;
   background-size: var(--lh-score-icon-background-size);
 }
 
@@ -130,23 +135,23 @@ body {
   font-size: 15px;
 }
 
-.lighthouse-score__value--poor {
-  background: var(--poor-color);
+.lighthouse-score__value--fail {
+  background: var(--fail-color);
 }
 
-.lighthouse-score__value--poor::after {
-  background: url('data:image/svg+xml;utf8,<svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><title>poor</title><path d="M8.33 2.33l1.33 1.33-2.335 2.335L9.66 8.33 8.33 9.66 5.995 7.325 3.66 9.66 2.33 8.33l2.335-2.335L2.33 3.66l1.33-1.33 2.335 2.335z" fill="white"/></svg>') no-repeat 50% 50%;
+.lighthouse-score__value--fail::after {
+  background: url('data:image/svg+xml;utf8,<svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><title>fail</title><path d="M8.33 2.33l1.33 1.33-2.335 2.335L9.66 8.33 8.33 9.66 5.995 7.325 3.66 9.66 2.33 8.33l2.335-2.335L2.33 3.66l1.33-1.33 2.335 2.335z" fill="white"/></svg>') no-repeat 50% 50%;
   background-size: var(--lh-score-icon-background-size);
 }
 
 .lighthouse-score__title {
-  margin-bottom: 10px;
+  margin-bottom: calc(var(--default-padding) / 2);
 }
 
 .lighthouse-score__description {
   font-size: smaller;
   color: var(--secondary-text-color);
-  margin: var(--default-padding) 0;
+  margin-top: calc(var(--default-padding) / 2);
 }
 
 .lighthouse-score__header {
@@ -197,11 +202,6 @@ body {
 
 .lighthouse-audit > .lighthouse-score {
   font-size: 16px;
-}
-
-.lighthouse-audit > *:not(.lighthouse-score) {
-  margin-left: 80px;
-  margin-top: 10px;
 }
 
 /* Report */
